adding background image

--- a/web/index.html
+++ b/web/index.html
@@ -17,6 +17,7 @@
     </style>
   </head>
   <body>
+    <div style="background-image: url('images/background.jpg');">
     <form action="/{{.U}}" method="get" accept-charset="utf-8">
       <input type="submit" value="refresh" />
     </form>
