--- a/web/index.html
+++ b/web/index.html
@@ -14,10 +14,15 @@
       h1 {
         font-family: Roboto, monospace;
       }
+      div {
+        background:  url('images/background.jpg');
+        width:800px;
+        height:600px;
+        background-size: 800px 600px;
     </style>
   </head>
   <body>
-    <div style="background-image: url('images/background.jpg');">
+    <div/>
     <form action="/{{.U}}" method="get" accept-charset="utf-8">
       <input type="submit" value="refresh" />
     </form>
